--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,10 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "vite.config.ts",
-      "use": "@vercel/static-build",
-      "config": { "distDir": "dist" }
-    }
-  ],
+  "buildCommand": "npm run build",
+  "installCommand": "npm install && npm install -D @vitejs/plugin-react",
+  "outputDirectory": "dist",
   "routes": [
     { "handle": "filesystem" },
     { "src": "/.*", "dest": "/index.html" }
-  ],
-  "installCommand": "npm install && npm install -D @vitejs/plugin-react",
-  "buildCommand": "npm run build",
-  "outputDirectory": "dist"
+  ]
 }
