--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/react": "^18.2.28",
+    "@types/react-dom": "^18.2.11",
+    "@vitejs/plugin-react": "^5.1.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.4.7",
     "typescript": "^5.6.2",
-    "vite": "^5.0.0",
-    "@types/react": "^18.2.28",
-    "@types/react-dom": "^18.2.11"
+    "vite": "^7.1.12"
   }
 }
